fixed alignment on buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ nav h1 a {
   color: #fff;
   display: inline-block;
   font-size: 10pt;
-  margin: 15px 0 0;
+  margin: auto 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
   text-decoration: none;
